[tool.black]
line-length = 150
target-version = ["py311"]

[tool.isort]
default_section = "THIRDPARTY"
ensure_newline_before_comments = true
force_grid_wrap = 0
force_single_line = false
include_trailing_comma = true
line_length = 150
multi_line_output = 3
use_parentheses = true

[tool.poetry]
name = "mygpt"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.20.0"
openai = "^0.27.2"
black = "^23.1.0"
isort = "^5.12.0"
